Fix gallery display bug on firefox

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -13,6 +13,7 @@
         a {
             overflow: hidden;
             height: max-content;
+            display: table; // don't ask why, firefox makes no sense
 
             &:hover img {
                 transform: scale(1.1);
